# tourism-recommendation

./: .env  .env.example  ABSA_RESEARCH.md  Enhanced Research Plan_ Model Voting-Based Tourism Recommender System.md  FOLDER_STRUCTURE.md  ML_RESEARCH_RESULTS.md  README.md  RESEARCH_FINDINGS.md  SENTIMENT_ANALYSIS_RESULTS.md  app.py  pyproject.toml  requirements.txt  verify_model_sizes.py  verify_models.py
.hypothesis/constants/: 02126dd80240f478  06ef200db43c487d  0b4f9a9936f0f58d  2327929a8f0dd56d  (+17 more)
data/: aspect_statistics.csv  location_insights.csv
scripts/: export_research_results.py  run_aspect_analysis.py  run_aspect_ml_training.py  run_research_evaluation.py  run_sentiment_analysis.py  train_models.py
sentiment_research/: .env  ASPECT_ML_RESULTS.md  DATA_CLEANING_AND_ML_METHODOLOGY.md  README.md  RESEARCH_PAPER_GUIDE.md  RESEARCH_QA_DEFENSE.md  SENTIMENT_ANALYSIS_RESEARCH.md  app.py  requirements.txt
src/: __init__.py  absa_api.py  collaborative_filter.py  content_based_filter.py  context_aware_engine.py  data_models.py  data_processor.py  ensemble_voting.py  evaluation.py  logger.py  mobile_optimizer.py  model_serializer.py  recommender_api.py  recommender_system.py  research_evaluation.py  sentiment_analysis.py
templates/: absa.html  index.html
tests/: __init__.py  test_collaborative_filter.py  test_content_based_filter.py  test_context_aware_engine.py  test_data_processor.py  test_ensemble_voting.py  test_error_handling.py  test_evaluation.py  test_integration.py  test_mobile_optimizer.py  test_model_serializer.py  test_recommender_api.py
(+297 files in other folders)
